--- a/app/src/main/res/layout/fragment_list_restaurant.xml
+++ b/app/src/main/res/layout/fragment_list_restaurant.xml
@@ -9,8 +9,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list_restaurant_rv"
-        android:layout_width="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_height="match_parent"
-        android:scrollbars="vertical" />
+        android:layout_width="match_parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
