--- a/app/src/main/res/layout/item_restaurant_cardview.xml
+++ b/app/src/main/res/layout/item_restaurant_cardview.xml
@@ -2,11 +2,13 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_marginTop="2dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <TextView
                 android:id="@+id/restaurant_name_txt"
                 android:layout_width="wrap_content"
@@ -18,28 +20,19 @@
                 app:layout_constraintLeft_toLeftOf="parent"/>
 
             <TextView
-                android:id="@+id/restaurant_type_txt"
+                android:id="@+id/restaurant_type_address_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="French"
-                app:layout_constraintTop_toBottomOf="@id/restaurant_name_txt"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_margin="8dp"/>
-
-            <TextView
-                android:id="@+id/restaurant_address_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="- 12 rue du Faubourg Poissonière"
+                android:text="French - 12 rue du Faubourg Poissonière"
                 android:layout_margin="8dp"
                 app:layout_constraintTop_toBottomOf="@id/restaurant_name_txt"
-                app:layout_constraintLeft_toRightOf="@id/restaurant_type_txt"/>
+                app:layout_constraintStart_toStartOf="parent"/>
 
             <TextView
                 android:id="@+id/restaurant_clock"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/restaurant_type_txt"
+                app:layout_constraintTop_toBottomOf="@id/restaurant_type_address_txt"
                 android:text="Open until 7 pm"
                 android:layout_margin="8dp"
                 app:layout_constraintLeft_toLeftOf="parent"
