--- a/app/src/main/res/layout/content_detail_restaurant.xml
+++ b/app/src/main/res/layout/content_detail_restaurant.xml
@@ -5,13 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".DetailRestaurant"
+    tools:context=".RestaurantDetails"
     tools:showIn="@layout/activity_detail_restaurant">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:text="@string/large_text" />
+        android:layout_height="wrap_content"/>
 
 </androidx.core.widget.NestedScrollView>
