--- a/app/src/main/res/layout/item_restaurant_cardview.xml
+++ b/app/src/main/res/layout/item_restaurant_cardview.xml
@@ -39,7 +39,7 @@
                 android:textStyle="italic"/>
 
             <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/restaurant_img"
+                android:id="@+id/restaurant_photo"
                 android:layout_width="100dp"
                 android:layout_height="match_parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -52,7 +52,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                app:layout_constraintRight_toLeftOf="@id/restaurant_img"
+                app:layout_constraintRight_toLeftOf="@id/restaurant_photo"
                 app:layout_constraintTop_toBottomOf="@id/restaurant_distance_txt"
                 android:src="@drawable/ic_baseline_person_outline_24"
                 android:background="#fff"/>
@@ -61,7 +61,7 @@
                 android:id="@+id/restaurant_distance_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintRight_toLeftOf="@id/restaurant_img"
+                app:layout_constraintRight_toLeftOf="@id/restaurant_photo"
                 android:text="120m"
                 android:layout_margin="5dp"
                 app:layout_constraintTop_toTopOf="parent"/>
@@ -71,7 +71,7 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_baseline_star_border_24"
                 app:layout_constraintTop_toBottomOf="@id/workmates_btn"
-                app:layout_constraintRight_toLeftOf="@id/restaurant_img"
+                app:layout_constraintRight_toLeftOf="@id/restaurant_photo"
                 android:layout_margin="5dp"
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
