--- a/app/src/main/res/layout/item_workmates_cardview.xml
+++ b/app/src/main/res/layout/item_workmates_cardview.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent">
 
         <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/profile_img"
+        android:id="@+id/workmate_img"
         android:layout_width="100dp"
         android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -20,12 +20,13 @@
         app:civ_border_color="#FF000000"/>
 
         <TextView
+            android:id="@+id/workmate_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="workmate_name is eating type_restaurant (restaurant_name)"
             android:textSize="10sp"
             android:layout_marginStart="8dp"
-            app:layout_constraintStart_toEndOf="@id/profile_img"
+            app:layout_constraintStart_toEndOf="@id/workmate_img"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
