--- a/app/src/main/res/layout/content_detail_restaurant.xml
+++ b/app/src/main/res/layout/content_detail_restaurant.xml
@@ -8,8 +8,13 @@
     tools:context=".RestaurantDetails"
     tools:showIn="@layout/activity_detail_restaurant">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="wrap_content"
+        android:id="@+id/restaurantDetail_workmates_rv"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
 </androidx.core.widget.NestedScrollView>
