--- a/app/src/main/res/layout/item_restaurant_cardview.xml
+++ b/app/src/main/res/layout/item_restaurant_cardview.xml
@@ -2,8 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_marginTop="2dp">
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -26,7 +25,8 @@
                 android:text="French - 12 rue du Faubourg Poissonière"
                 android:layout_margin="8dp"
                 app:layout_constraintTop_toBottomOf="@id/restaurant_name_txt"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintStart_toStartOf="parent"
+                android:textSize="11sp"/>
 
             <TextView
                 android:id="@+id/restaurant_clock"
@@ -43,19 +43,25 @@
                 android:layout_width="100dp"
                 android:layout_height="match_parent"
                 app:layout_constraintRight_toRightOf="parent"
-                android:src="@drawable/ic_launcher_foreground"
-                android:background="#000"
-                android:tint="@color/colorAccent"/>
+                android:src="@drawable/ic_launcher_foreground"/>
 
-            <androidx.appcompat.widget.AppCompatImageButton
+            <ImageButton
                 android:id="@+id/workmates_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                app:layout_constraintRight_toLeftOf="@id/restaurant_photo"
-                app:layout_constraintTop_toBottomOf="@id/restaurant_distance_txt"
+                app:layout_constraintStart_toStartOf="@+id/restaurant_distance_txt"
+                app:layout_constraintBottom_toBottomOf="@id/restaurant_type_address_txt"
                 android:src="@drawable/ic_baseline_person_outline_24"
                 android:background="#fff"/>
+
+            <TextView
+                android:id="@+id/workmates_count_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toEndOf="@id/workmates_btn"
+                app:layout_constraintBottom_toBottomOf="@id/workmates_btn"
+                android:text="(0)"
+                android:inputType="number"/>
 
             <TextView
                 android:id="@+id/restaurant_distance_txt"
@@ -66,14 +72,13 @@
                 android:layout_margin="5dp"
                 app:layout_constraintTop_toTopOf="parent"/>
 
-            <androidx.appcompat.widget.AppCompatImageView
+            <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_baseline_star_border_24"
-                app:layout_constraintTop_toBottomOf="@id/workmates_btn"
                 app:layout_constraintRight_toLeftOf="@id/restaurant_photo"
-                android:layout_margin="5dp"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                android:layout_marginTop="5dp"
+                app:layout_constraintBottom_toBottomOf="@+id/restaurant_clock"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
