--- a/app/src/main/res/layout/content_detail_restaurant.xml
+++ b/app/src/main/res/layout/content_detail_restaurant.xml
@@ -8,9 +8,83 @@
     tools:context=".RestaurantDetails"
     tools:showIn="@layout/activity_detail_restaurant">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/restaurantDetail_workmates_rv"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/restaurant_details_linear_layout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/restaurant_details_call_btn"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="#fff"
+            android:src="@drawable/ic_baseline_call_24"
+            android:layout_gravity="center"
+            android:layout_marginStart="55dp"/>
+
+        <TextView
+            app:layout_constraintTop_toBottomOf="@id/restaurant_details_call_btn"
+            app:layout_constraintStart_toStartOf="@id/restaurant_details_call_btn"
+            app:layout_constraintEnd_toEndOf="@id/restaurant_details_call_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="CALL"/>
+
+        <ImageButton
+            android:id="@+id/restaurant_details_stars_btn"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/restaurant_details_call_btn"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="#fff"
+            android:src="@drawable/ic_baseline_star_border_24"
+            android:layout_gravity="center"
+            android:layout_marginStart="55dp"/>
+
+        <TextView
+            app:layout_constraintStart_toStartOf="@id/restaurant_details_stars_btn"
+            app:layout_constraintTop_toBottomOf="@id/restaurant_details_stars_btn"
+            app:layout_constraintEnd_toEndOf="@id/restaurant_details_stars_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="LIKE"/>
+
+        <ImageButton
+            android:id="@+id/restaurant_details_website_btn"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/restaurant_details_stars_btn"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="#fff"
+            android:src="@drawable/ic_baseline_public_24"
+            android:layout_gravity="center"
+            android:layout_marginStart="55dp"/>
+
+        <TextView
+            app:layout_constraintTop_toBottomOf="@id/restaurant_details_website_btn"
+            app:layout_constraintStart_toStartOf="@id/restaurant_details_website_btn"
+            app:layout_constraintEnd_toEndOf="@id/restaurant_details_website_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="WEBSITE"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+            app:layout_constraintTop_toBottomOf="@id/restaurant_details_linear_layout"
+            android:id="@+id/restaurantDetail_workmates_rv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.core.widget.NestedScrollView>
