--- a/app/src/main/res/layout/activity_detail_restaurant.xml
+++ b/app/src/main/res/layout/activity_detail_restaurant.xml
@@ -24,47 +24,25 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:toolbarId="@+id/restaurant_details_toolbar">
 
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/restaurant_details_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_collapseMode="pin"
+                app:popupTheme="@style/AppTheme.PopupOverlay"
+                app:contentInsetLeft="0dp"
+                app:contentInsetStart="0dp"
+                app:contentInsetStartWithNavigation="0dp"
+                app:layout_scrollFlags="scroll|enterAlways">
+
                 <ImageView
                     android:id="@+id/restaurant_detail_img"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:src="@drawable/logo_resto"
-                    android:layout_marginBottom="80dp"
                     android:cropToPadding="true"
-                    android:layout_gravity="top"
+                    android:scaleType="centerCrop"
                     app:layout_collapseMode="pin"/>
-
-                <androidx.appcompat.widget.Toolbar
-                    android:id="@+id/restaurant_details_toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    app:layout_collapseMode="pin"
-                    app:popupTheme="@style/AppTheme.PopupOverlay"
-                    android:layout_gravity="bottom">
-
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                    <TextView
-                        android:id="@+id/restaurant_details_name_txt"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/app_name"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        android:layout_margin="4dp"/>
-
-                    <TextView
-                        android:id="@+id/restaurant_details_address_txt"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="French restaurant - 12 rue du Faubourg Poissonière"
-                        app:layout_constraintTop_toBottomOf="@id/restaurant_details_name_txt"
-                        app:layout_constraintStart_toStartOf="parent"
-                        android:layout_margin="4dp"/>
-
-                    </androidx.constraintlayout.widget.ConstraintLayout>
 
                 </androidx.appcompat.widget.Toolbar>
 
@@ -78,7 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
-        app:layout_anchor="@id/app_bar"
+        app:layout_anchor="@id/restaurant_details_toolbar"
         app:layout_anchorGravity="bottom|end"
         android:foreground="@drawable/ic_baseline_check_circle_24"/>
 
