--- a/app/src/main/res/layout/content_detail_restaurant.xml
+++ b/app/src/main/res/layout/content_detail_restaurant.xml
@@ -6,78 +6,156 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".RestaurantDetails"
-    tools:showIn="@layout/activity_detail_restaurant">
+    tools:showIn="@layout/activity_detail_restaurant"
+    android:descendantFocusability="blocksDescendants">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/restaurant_details_linear_layout"
+        android:layout_height="match_parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:orientation="horizontal">
+        app:layout_constraintTop_toTopOf="parent">
 
-        <ImageButton
-            android:id="@+id/restaurant_details_call_btn"
+        <RelativeLayout
+            android:id="@+id/restaurant_details_textView_container"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:background="#fff"
-            android:src="@drawable/ic_baseline_call_24"
-            android:layout_gravity="center"
-            android:layout_marginStart="55dp"/>
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:background="@color/colorPrimary">
 
-        <TextView
-            app:layout_constraintTop_toBottomOf="@id/restaurant_details_call_btn"
-            app:layout_constraintStart_toStartOf="@id/restaurant_details_call_btn"
-            app:layout_constraintEnd_toEndOf="@id/restaurant_details_call_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="CALL"/>
+            <TextView
+                android:id="@+id/restaurant_details_name_txt"
+                android:layout_alignParentTop="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/app_name"
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="8dp"
+                android:textColor="#fff"/>
 
-        <ImageButton
-            android:id="@+id/restaurant_details_stars_btn"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/restaurant_details_call_btn"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:background="#fff"
-            android:src="@drawable/ic_baseline_star_border_24"
-            android:layout_gravity="center"
-            android:layout_marginStart="55dp"/>
+            <RatingBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="?android:attr/ratingBarStyleSmall"
+                android:numStars="3"
+                android:layout_toEndOf="@id/restaurant_details_name_txt"
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="8dp"
+                android:theme="@style/RatingBar"/>
 
-        <TextView
-            app:layout_constraintStart_toStartOf="@id/restaurant_details_stars_btn"
-            app:layout_constraintTop_toBottomOf="@id/restaurant_details_stars_btn"
-            app:layout_constraintEnd_toEndOf="@id/restaurant_details_stars_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="LIKE"/>
 
-        <ImageButton
-            android:id="@+id/restaurant_details_website_btn"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/restaurant_details_stars_btn"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:background="#fff"
-            android:src="@drawable/ic_baseline_public_24"
-            android:layout_gravity="center"
-            android:layout_marginStart="55dp"/>
+            <!--            <ImageView-->
+<!--                android:id="@+id/first_star_restaurant_details"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_toEndOf="@+id/restaurant_details_name_txt"-->
+<!--                android:src="@drawable/ic_baseline_star_24"-->
+<!--                android:visibility="visible"-->
+<!--                android:layout_marginTop="2dp"-->
+<!--                android:layout_marginStart="2dp"/>-->
 
-        <TextView
-            app:layout_constraintTop_toBottomOf="@id/restaurant_details_website_btn"
-            app:layout_constraintStart_toStartOf="@id/restaurant_details_website_btn"
-            app:layout_constraintEnd_toEndOf="@id/restaurant_details_website_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="WEBSITE"/>
+<!--            <ImageView-->
+<!--                android:id="@+id/second_star_restaurant_details"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_toEndOf="@+id/first_star_restaurant_details"-->
+<!--                android:src="@drawable/ic_baseline_star_24"-->
+<!--                android:visibility="visible"-->
+<!--                android:layout_marginTop="2dp"-->
+<!--                android:layout_marginStart="2dp"/>-->
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+<!--            <ImageView-->
+<!--                android:id="@+id/third_star_restaurant_details"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_toEndOf="@+id/second_star_restaurant_details"-->
+<!--                android:src="@drawable/ic_baseline_star_24"-->
+<!--                android:visibility="visible"-->
+<!--                android:layout_marginTop="2dp"-->
+<!--                android:layout_marginStart="2dp"/>-->
+
+            <TextView
+                android:id="@+id/restaurant_details_address_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="French restaurant - 12 rue du Faubourg Poissonière"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="8dp"
+                android:textColor="#fff"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/restaurant_details_linear_layout"
+            app:layout_constraintTop_toBottomOf="@id/restaurant_details_textView_container"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginStart="50dp"
+                android:layout_centerVertical="true">
+                <ImageButton
+                    android:id="@+id/restaurant_details_call_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="#fff"
+                    android:src="@drawable/ic_baseline_call_24"
+                    android:layout_gravity="center"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="CALL"
+                    android:textAlignment="center"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginStart="50dp"
+                android:layout_centerInParent="true">
+
+                <ImageButton
+                    android:id="@+id/restaurant_details_stars_btn"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/restaurant_details_call_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="#fff"
+                    android:src="@drawable/ic_baseline_star_border_24"
+                    android:layout_gravity="center"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="LIKE"
+                    android:textAlignment="center"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginEnd="50dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true">
+                <ImageButton
+                    android:id="@+id/restaurant_details_website_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="#fff"
+                    android:src="@drawable/ic_baseline_public_24"
+                    android:layout_gravity="center"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="WEBSITE"
+                    android:textAlignment="center"/>
+            </LinearLayout>
+
+        </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
             app:layout_constraintTop_toBottomOf="@id/restaurant_details_linear_layout"
