--- a/app/src/main/res/layout/item_restaurant_cardview.xml
+++ b/app/src/main/res/layout/item_restaurant_cardview.xml
@@ -45,6 +45,15 @@
                 app:layout_constraintRight_toRightOf="parent"
                 android:src="@drawable/ic_launcher_foreground"/>
 
+            <TextView
+                android:id="@+id/restaurant_distance_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintRight_toLeftOf="@id/restaurant_photo"
+                android:text="120m"
+                android:layout_margin="5dp"
+                app:layout_constraintTop_toTopOf="parent"/>
+
             <ImageButton
                 android:id="@+id/workmates_btn"
                 android:layout_width="wrap_content"
@@ -63,22 +72,43 @@
                 android:text="(0)"
                 android:inputType="number"/>
 
-            <TextView
-                android:id="@+id/restaurant_distance_txt"
+            <RatingBar
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintRight_toLeftOf="@id/restaurant_photo"
-                android:text="120m"
-                android:layout_margin="5dp"
-                app:layout_constraintTop_toTopOf="parent"/>
+                style="?android:attr/ratingBarStyleSmall"
+                android:numStars="3"
+                app:layout_constraintTop_toBottomOf="@id/workmates_btn"
+                app:layout_constraintEnd_toStartOf="@id/restaurant_photo"
+                android:layout_marginTop="8dp"
+                android:theme="@style/RatingBar"/>
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_baseline_star_border_24"
-                app:layout_constraintRight_toLeftOf="@id/restaurant_photo"
-                android:layout_marginTop="5dp"
-                app:layout_constraintBottom_toBottomOf="@+id/restaurant_clock"/>
+<!--            <ImageView-->
+<!--                android:id="@+id/first_star"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:src="@drawable/ic_baseline_star_border_24"-->
+<!--                app:layout_constraintRight_toLeftOf="@id/restaurant_photo"-->
+<!--                android:layout_marginTop="5dp"-->
+<!--                app:layout_constraintBottom_toBottomOf="@+id/restaurant_clock"-->
+<!--                android:visibility="gone"/>-->
+<!--            <ImageView-->
+<!--                android:id="@+id/second_star"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:src="@drawable/ic_baseline_star_border_24"-->
+<!--                app:layout_constraintRight_toLeftOf="@id/first_star"-->
+<!--                android:layout_marginTop="5dp"-->
+<!--                app:layout_constraintBottom_toBottomOf="@+id/restaurant_clock"-->
+<!--                android:visibility="gone"/>-->
+<!--            <ImageView-->
+<!--                android:id="@+id/third_star"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:src="@drawable/ic_baseline_star_border_24"-->
+<!--                app:layout_constraintRight_toLeftOf="@id/second_star"-->
+<!--                android:layout_marginTop="5dp"-->
+<!--                app:layout_constraintBottom_toBottomOf="@+id/restaurant_clock"-->
+<!--                android:visibility="gone"/>-->
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
