--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#FF4500</color>
     <color name="colorPrimaryDark">#D74826</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimaryLight">#FF7F50</color>
+
+    <color name="duskYellow">#FFA500</color>
+    <color name="lightGrey">#a8a8a8</color>
 </resources>
