--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -22,7 +22,17 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:popupTheme="@style/AppTheme.PopupOverlay"
-            app:titleTextColor="#fff"/>
+            app:titleTextColor="#fff">
+
+            <SearchView
+                android:id="@+id/main_activity_search_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#fff"
+                android:layout_margin="8dp"
+                android:visibility="gone"/>
+
+        </androidx.appcompat.widget.Toolbar>
 
         <fragment
             android:id="@+id/nav_host_fragment"
@@ -51,7 +61,7 @@
         android:layout_gravity="start|left"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_main"
-        app:menu="@menu/activity_main_drawer_menu"
+        app:menu="@menu/main_activity_drawer_menu"
         android:background="@color/colorPrimaryLight"
         app:itemIconTint="#fff"
         app:itemTextColor="#fff"/>
