--- a/app/src/main/res/layout/content_detail_restaurant.xml
+++ b/app/src/main/res/layout/content_detail_restaurant.xml
@@ -48,7 +48,7 @@
                 android:id="@+id/restaurant_details_address_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="French restaurant - 12 rue du Faubourg Poissonière"
+                android:text="@string/french_restaurant_12_faubourg_poissoniere_street"
                 android:layout_centerVertical="true"
                 android:layout_marginTop="8dp"
                 android:layout_marginStart="8dp"
@@ -78,7 +78,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="CALL"
+                    android:text="@string/call"
                     android:textAlignment="center"/>
             </LinearLayout>
 
@@ -101,7 +101,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="LIKE"
+                    android:text="@string/like"
                     android:textAlignment="center"/>
             </LinearLayout>
 
@@ -122,7 +122,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="WEBSITE"
+                    android:text="@string/website"
                     android:textAlignment="center"/>
             </LinearLayout>
 
