--- a/app/src/main/res/layout/item_restaurant_cardview.xml
+++ b/app/src/main/res/layout/item_restaurant_cardview.xml
@@ -12,7 +12,7 @@
                 android:id="@+id/restaurant_name_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Restaurant Name"
+                android:text="@string/restaurant_name"
                 android:textColor="#000"
                 android:layout_margin="8dp"
                 app:layout_constraintTop_toTopOf="parent"
@@ -22,7 +22,7 @@
                 android:id="@+id/restaurant_type_address_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="French - 12 rue du Faubourg Poissonière"
+                android:text="@string/french_restaurant_12_faubourg_poissoniere_street"
                 android:layout_margin="8dp"
                 app:layout_constraintTop_toBottomOf="@id/restaurant_name_txt"
                 app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/restaurant_type_address_txt"
-                android:text="Open until ... pm"
+                android:text="@string/open_until_pm"
                 android:layout_margin="8dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:textStyle="italic"/>
@@ -50,7 +50,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintRight_toLeftOf="@id/restaurant_photo"
-                android:text="120m"
+                android:text="@string/_120m"
                 android:layout_margin="5dp"
                 app:layout_constraintTop_toTopOf="parent"
                 android:visibility="gone"/>
@@ -70,8 +70,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="@id/workmates_btn"
                 app:layout_constraintEnd_toStartOf="@id/restaurant_photo"
-                android:text="(0)"
-                android:inputType="number"/>
+                android:text="@string/_0"/>
 
             <RatingBar
                 android:id="@+id/rating_bar_indicator_item"
