--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -6,22 +6,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:id="@+id/notifications_txt"
-        android:layout_margin="2dp"
+        android:id="@+id/label_notifications_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="enable notifications :"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="5dp"
+        android:text="@string/enable_notifications"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:textSize="20sp"/>
 
     <Switch
-        android:id="@+id/switch_bnt"
-        android:layout_margin="2dp"
+        android:id="@+id/enable_notifications_switch_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/notifications_txt"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="5dp"
+        app:layout_constraintTop_toBottomOf="@id/label_notifications_txt"
         app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="UseSwitchCompatOrMaterialXml" />
+        tools:ignore="UseSwitchCompatOrMaterialXml"
+        android:enabled="true"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
