--- a/app/src/main/res/layout/activity_detail_restaurant.xml
+++ b/app/src/main/res/layout/activity_detail_restaurant.xml
@@ -28,7 +28,7 @@
                 android:id="@+id/restaurant_detail_img"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/logo_resto"
+                android:src="@drawable/ic_launcher_background"
                 android:cropToPadding="false"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="pin"
