--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:textSize="20sp"/>
 
-    <Switch
+    <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/enable_notifications_switch_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
